more bugs fixed
turned up sensitivity of FindBugs all the way (I think)